--- a/src/partials/content.htm
+++ b/src/partials/content.htm
@@ -1,3 +1,6 @@
 <content>
-	<div class="fighter"></div>
+	<div class="game-view">
+		<canvas></canvas>
+		<!-- <div class="fighter"></div> -->
+	</div>
 </content>
