--- a/src/css/main.less
+++ b/src/css/main.less
@@ -6,6 +6,23 @@ content {
 	right: 0;
 	bottom: 0;
 
+	.game-view {
+		position: absolute;
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: 0;
+
+		canvas {
+			// background: red;
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+		}
+	}
+
 	.fighter {
 		position: absolute;
 		top: 50px;
