--- a/src/partials/content.htm
+++ b/src/partials/content.htm
@@ -1,6 +1,6 @@
 <content>
 	<div class="game-view">
 		<canvas></canvas>
-		<!-- <div class="fighter"></div> -->
+		<div class="fighter1"></div>
 	</div>
 </content>
