--- a/src/css/main.less
+++ b/src/css/main.less
@@ -18,8 +18,9 @@ content {
 			position: absolute;
 			top: 0;
 			left: 0;
-			width: 100%;
-			height: 100%;
+			width: 800px;
+			height: 500px;
+			image-rendering: pixelated;
 		}
 	}
 
