--- a/src/partials/content.htm
+++ b/src/partials/content.htm
@@ -1,6 +1,6 @@
-<content>
+<content data-show="game">
 	<div class="game-view">
 		<canvas></canvas>
-		<div class="fighter1"></div>
+		<div class="fighter"></div>
 	</div>
 </content>
