--- a/src/css/main.less
+++ b/src/css/main.less
@@ -32,13 +32,17 @@ content {
 		image-rendering: pixelated;
 		background: url(~/gfx/sprite.png) no-repeat;
 		background-position: 0 0;
-		width: 70px;
-		height: 64px;
-		animation: walk 1000ms steps(3) infinite,
-					back-forth 2500ms linear alternate infinite;
-		// animation: low-kick 900ms steps(2) infinite;
-		// animation: mid-kick 1000ms steps(4) infinite;
-		// animation: hi-kick 1100ms steps(4) infinite;
+		width: 72px;
+		height: 72px;
+
+		&.anim {
+			animation: walk 1000ms steps(3) infinite;
+			// animation: walk 1000ms steps(3) infinite,
+			// 			back-forth 2500ms linear alternate infinite;
+			// animation: low-kick 900ms steps(2) infinite;
+			// animation: mid-kick 1000ms steps(4) infinite;
+			// animation: hi-kick 1100ms steps(4) infinite;
+		}
 	}
 }
 
@@ -49,27 +53,27 @@ content {
 
 @keyframes walk {
 	0%   { background-position: 0 0; }
-	50%  { background-position: -210px 0; }
+	50%  { background-position: -216px 0; }
 	100% { background-position: 0 0; }
 }
 
 @keyframes hi-kick {
-	0%   { background-position: 0 -64px; }
-	46%  { background-position: -280px -64px; }
-	54%  { background-position: -280px -64px; }
-	100% { background-position: 0 -64px; }
+	0%   { background-position: 0 -72px; }
+	46%  { background-position: -292px -72px; }
+	54%  { background-position: -292px -72px; }
+	100% { background-position: 0 -72px; }
 }
 
 @keyframes mid-kick {
-	0%   { background-position: 0 -128px; }
-	46%  { background-position: -280px -128px; }
-	54%  { background-position: -280px -128px; }
-	100% { background-position: 0 -128px; }
+	0%   { background-position: 0 -144px; }
+	46%  { background-position: -292px -144px; }
+	54%  { background-position: -292px -144px; }
+	100% { background-position: 0 -144px; }
 }
 
 @keyframes low-kick {
-	0%   { background-position: 0 -192px; }
-	46%  { background-position: -140px -192px; }
-	54%  { background-position: -140px -192px; }
-	100% { background-position: 0 -192px; }
+	0%   { background-position: 0 -216px; }
+	46%  { background-position: -144px -216px; }
+	54%  { background-position: -144px -216px; }
+	100% { background-position: 0 -216px; }
 }
