--- a/src/partials/content.htm
+++ b/src/partials/content.htm
@@ -1,6 +1,6 @@
 <content data-show="game">
-	<div class="game-view">
+	<div class="game-view" data-area="game">
 		<canvas></canvas>
-		<div class="fighter"></div>
+		<div class="fighter" data-click="toggle-anim"></div>
 	</div>
 </content>
