--- a/src/partials/content.htm
+++ b/src/partials/content.htm
@@ -1,5 +1,5 @@
 <content data-show="game">
-	<div class="game-view" data-area="game">
+	<div class="game-view old" data-area="game">
 		<canvas></canvas>
 		<!-- <div class="fighter" data-click="toggle-anim"></div> -->
 	</div>
