--- a/src/css/main.less
+++ b/src/css/main.less
@@ -7,40 +7,34 @@ content {
 	bottom: 0;
 
 	.game-view {
+		background: #fff;
 		position: absolute;
 		top: 0;
 		left: 0;
 		right: 0;
 		bottom: 0;
 
-		&.old {
+		&:before {
+			content: "";
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+			background: 50% 50% no-repeat;
+			background-size: 100% auto;
+			background-image: var( --img );
+		}
+
+		&[style*="--img: url('/app/ant/karate/gfx/bg-01.png');"] {
 			background: #000;
 
 			&:before {
-				content: "";
-				position: absolute;
 				top: 46px;
 				left: 10px;
 				width: 760px;
 				height: 420px;
-				background: url(~/gfx/bg-01.png) 50% 50% no-repeat;
-				background-size: 100% auto;
 				image-rendering: pixelated;
-			}
-		}
-
-		&.new {
-			background: #fff;
-			
-			&:before {
-				content: "";
-				position: absolute;
-				top: 0;
-				left: 0;
-				width: 100%;
-				height: 100%;
-				background: url(~/gfx/bg-02.webp) 50% 50% no-repeat;
-				background-size: 100% auto;
 			}
 		}
 
