--- a/src/partials/content.htm
+++ b/src/partials/content.htm
@@ -1,6 +1,5 @@
-<content data-show="game">
-	<div class="game-view old" data-area="game">
+<content data-show="game" data-context="game-content">
+	<div class="game-view" data-area="game" style="--img: url('/app/ant/karate/gfx/bg-01.png');">
 		<canvas></canvas>
-		<!-- <div class="fighter" data-click="toggle-anim"></div> -->
 	</div>
 </content>
