--- a/src/css/editor.less
+++ b/src/css/editor.less
@@ -1,2 +1,24 @@
 
+.layout {
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	display: flex;
 
+	.left {
+		background: #0002;
+		width: 160px;
+	}
+
+	.work {
+		background: #f002;
+		flex: 1;
+	}
+
+	.right {
+		width: 160px;
+		background: #0f02;
+	}
+}
