--- a/src/partials/editor/content.htm
+++ b/src/partials/editor/content.htm
@@ -1,1 +1,47 @@
-Editor
+<div class="layout">
+	<div class="left">
+		<div class="item">
+			<i class="icon-arrow"></i>
+			<i class="folder-open"></i>
+			<span>Fighter</span>
+
+			<div class="children">
+				<div class="item">
+					<i class="icon-blank"></i>
+					<i class="frame"></i>
+					<span>High Kick</span>
+				</div>
+				<div class="item">
+					<i class="icon-blank"></i>
+					<i class="frame"></i>
+					<span>Mid Kick</span>
+				</div>
+				<div class="item">
+					<i class="icon-blank"></i>
+					<i class="frame"></i>
+					<span>Low Kick</span>
+				</div>
+			</div>
+		</div>
+
+		<div class="item">
+			<i class="icon-arrow"></i>
+			<i class="folder-open"></i>
+			<span>Blow</span>
+
+			<div class="children">
+				<div class="item">
+					<i class="icon-blank"></i>
+					<i class="frame"></i>
+					<span>Splatter</span>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="work">
+		<div class="canvas"></div>
+	</div>
+	<div class="right">
+		<div class="minimap"></div>
+	</div>
+</div>
