--- a/src/css/editor.less
+++ b/src/css/editor.less
@@ -8,17 +8,46 @@
 	display: flex;
 
 	.left {
-		background: #0002;
+		background: #f2f2f2;
 		width: 160px;
 	}
 
 	.work {
-		background: #f002;
+		background: #aaa;
 		flex: 1;
+		position: relative;
+		border-left: 1px solid #777a;
+		border-right: 1px solid #777a;
+
+		.canvas {
+			background-image: conic-gradient(#ccc 0 25%,#eee 25% 50%,#ccc 50% 75%,#eee 75% 100%);
+			background-size: 8px 8px;
+			position: absolute;
+			top: 62px;
+			left: 98px;
+			width: 288px;
+			height: 288px;
+			box-shadow: 0 0 0 1px #0002,
+						0 1px 9px #0005;
+
+			&:before {
+				content: "";
+				position: absolute;
+				top: 0;
+				left: 0;
+				right: 0;
+				bottom: 0;
+				filter: drop-shadow(0 1px 5px #0003);
+				image-rendering: pixelated;
+				background: url(~/gfx/sprite.png) no-repeat;
+				background-size: 2880px auto;
+				background-position: 0 0;
+			}
+		}
 	}
 
 	.right {
 		width: 160px;
-		background: #0f02;
+		background: #ddd;
 	}
 }
