--- a/src/partials/editor/content.htm
+++ b/src/partials/editor/content.htm
@@ -1,24 +1,24 @@
 <div class="layout">
-	<div class="left">
+	<div class="tree">
 		<div class="item">
 			<i class="icon-arrow"></i>
-			<i class="folder-open"></i>
+			<i class="icon-folder"></i>
 			<span>Fighter</span>
 
 			<div class="children">
 				<div class="item">
 					<i class="icon-blank"></i>
-					<i class="frame"></i>
+					<i class="icon-frame"></i>
 					<span>High Kick</span>
 				</div>
 				<div class="item">
 					<i class="icon-blank"></i>
-					<i class="frame"></i>
+					<i class="icon-frame"></i>
 					<span>Mid Kick</span>
 				</div>
 				<div class="item">
 					<i class="icon-blank"></i>
-					<i class="frame"></i>
+					<i class="icon-frame"></i>
 					<span>Low Kick</span>
 				</div>
 			</div>
@@ -26,22 +26,32 @@
 
 		<div class="item">
 			<i class="icon-arrow"></i>
-			<i class="folder-open"></i>
+			<i class="icon-folder"></i>
 			<span>Blow</span>
 
 			<div class="children">
 				<div class="item">
 					<i class="icon-blank"></i>
-					<i class="frame"></i>
+					<i class="icon-frame"></i>
 					<span>Splatter</span>
 				</div>
 			</div>
 		</div>
 	</div>
-	<div class="work">
-		<div class="canvas"></div>
-	</div>
 	<div class="right">
-		<div class="minimap"></div>
+		<div class="frame">
+			<div class="canvas">
+				<!-- <span style="--x: 65; --y: 50; --r: 15;"></span>
+				<span style="--x: 47; --y: 85; --r: 11;"></span>
+				<span style="--x: 77; --y: 85; --r: 12;"></span>
+				<span style="--x: 45; --y: 116; --r: 12;"></span>
+				<span style="--x: 94; --y: 118; --r: 11;"></span>
+				<span style="--x: 34; --y: 133; --r: 10;"></span>
+				<span style="--x: 108; --y: 133; --r: 10;"></span> -->
+			</div>
+		</div>
+		<div class="strip">
+			<div class="minimap"></div>
+		</div>
 	</div>
 </div>
