--- a/src/css/editor.less
+++ b/src/css/editor.less
@@ -7,6 +7,19 @@
 	bottom: 0;
 	display: flex;
 
+	&.cover {
+		&:before {
+			content: "";
+			background: transparent;
+			position: absolute;
+			top: 0;
+			left: 0;
+			right: 0;
+			bottom: 0;
+			z-index: 12;
+		}
+	}
+
 	.tree {
 		background: #f2f2f2;
 		width: 160px;
@@ -49,18 +62,22 @@
 		display: flex;
 		flex-direction: column;
 		border-left: 1px solid #777a;
+		--size: 28.8px;
+		--aX: 0;
+		--aY: 0;
 
-		.frame {
+		.work {
 			background: #aaa;
 			flex: 1;
 			position: relative;
 
+			.minimap,
 			.canvas {
-				background-image: conic-gradient(#ccc 0 25%,#eee 25% 50%,#ccc 50% 75%,#eee 75% 100%);
-				background-size: 8px 8px;
+				background-image: conic-gradient(#ccc 0 25%, #eee 25% 50%, #ccc 50% 75%, #eee 75% 100%);
+				background-size: calc( var( --size ) * 2 ) calc( var( --size ) * 2 );
 				position: absolute;
 				top: 22px;
-				left: 168px;
+				left: 331px;
 				width: 288px;
 				height: 288px;
 				box-shadow: 0 0 0 1px #0002,
@@ -76,8 +93,37 @@
 					filter: drop-shadow(0 1px 5px #0003);
 					image-rendering: pixelated;
 					background: url(~/gfx/sprite.png) no-repeat;
-					background-size: 2880px auto;
 					background-position: 0 0;
+					background-size: 288px auto;
+				}
+			}
+
+			.minimap {
+				&:before {
+					opacity: .35;
+				}
+
+				&:after {
+					content: "";
+					position: absolute;
+					top: calc( var( --aY ) * var( --size ) );
+					left: calc( var( --aX ) * var( --size ) );
+					width: var( --size );
+					height: var( --size );
+					background: url(~/gfx/sprite.png) no-repeat;
+					background-position: calc( calc( var( --aX ) * var( --size ) ) * -1 ) calc( calc( var( --aY ) * var( --size ) ) * -1 );
+					background-size: 288px auto;
+					box-shadow: 0 0 0 2px #f00;
+				}
+			}
+
+			.canvas {
+				background-size: 8px 8px;
+				left: 20px;
+
+				&:before {
+					background-size: 2880px auto;
+					background-position: calc( calc( var( --aX ) * var( --size ) ) * -10 ) calc( calc( var( --aY ) * var( --size ) ) * -10 );
 				}
 
 				span {
@@ -88,6 +134,27 @@
 					width: calc( var(--r) * 4px );
 					height: calc( var(--r) * 4px );
 					border-radius: 50%;
+					cursor: move;
+
+					&:hover {
+						&:before {
+							display: block;
+						}
+					}
+
+					&:before {
+						content: "";
+						display: none;
+						position: absolute;
+						top: 50%;
+						left: 100%;
+						width: 10px;
+						height: 10px;
+						margin: -5px 0 0 -5px;
+						background: #fff;
+						border: 1px solid #000;
+						cursor: ew-resize;
+					}
 				}
 			}
 		}
