--- a/src/partials/editor/content.htm
+++ b/src/partials/editor/content.htm
@@ -1,4 +1,4 @@
-<div class="layout">
+<div class="layout" data-area="editor">
 	<div class="tree">
 		<div class="item">
 			<i class="icon-arrow"></i>
@@ -39,19 +39,12 @@
 		</div>
 	</div>
 	<div class="right">
-		<div class="frame">
-			<div class="canvas">
-				<!-- <span style="--x: 65; --y: 50; --r: 15;"></span>
-				<span style="--x: 47; --y: 85; --r: 11;"></span>
-				<span style="--x: 77; --y: 85; --r: 12;"></span>
-				<span style="--x: 45; --y: 116; --r: 12;"></span>
-				<span style="--x: 94; --y: 118; --r: 11;"></span>
-				<span style="--x: 34; --y: 133; --r: 10;"></span>
-				<span style="--x: 108; --y: 133; --r: 10;"></span> -->
-			</div>
+		<div class="work">
+			<div class="canvas"></div>
+			<div class="minimap" data-click="minimap-select"></div>
 		</div>
 		<div class="strip">
-			<div class="minimap"></div>
+			<div class="frame"></div>
 		</div>
 	</div>
 </div>
