--- a/src/partials/editor/content.htm
+++ b/src/partials/editor/content.htm
@@ -44,7 +44,12 @@
 			<div class="minimap" data-click="minimap-select"></div>
 		</div>
 		<div class="strip">
-			<div class="frame"></div>
+			<div class="frames" data-click="frames-select">
+				<span style="--fY: 0; --fX: 0;"></span>
+				<span style="--fY: 0; --fX: 1;"></span>
+				<span style="--fY: 0; --fX: 2;"></span>
+				<span style="--fY: 0; --fX: 3;"></span>
+			</div>
 		</div>
 	</div>
 </div>
