--- a/src/css/editor.less
+++ b/src/css/editor.less
@@ -17,6 +17,7 @@
 			right: 0;
 			bottom: 0;
 			z-index: 12;
+			cursor: none;
 		}
 	}
 
@@ -78,8 +79,8 @@
 				position: absolute;
 				top: 22px;
 				left: 331px;
-				width: 288px;
-				height: 288px;
+				width: calc( var( --size ) * 10 );
+				height: calc( var( --size ) * 10 );
 				box-shadow: 0 0 0 1px #0002,
 							0 1px 9px #0005;
 
@@ -94,11 +95,13 @@
 					image-rendering: pixelated;
 					background: url(~/gfx/sprite.png) no-repeat;
 					background-position: 0 0;
-					background-size: 288px auto;
+					background-size: calc( var( --size ) * 10 ) auto;
 				}
 			}
 
 			.minimap {
+				cursor: pointer;
+
 				&:before {
 					opacity: .35;
 				}
@@ -112,7 +115,7 @@
 					height: var( --size );
 					background: url(~/gfx/sprite.png) no-repeat;
 					background-position: calc( calc( var( --aX ) * var( --size ) ) * -1 ) calc( calc( var( --aY ) * var( --size ) ) * -1 );
-					background-size: 288px auto;
+					background-size: calc( var( --size ) * 10 ) auto;
 					box-shadow: 0 0 0 2px #f00;
 				}
 			}
@@ -127,42 +130,74 @@
 				}
 
 				span {
-					background: #2927;
 					position: absolute;
 					top: calc( calc( var(--y) * 2px ) - calc( var(--r) * 2px ) );
 					left: calc( calc( var(--x) * 2px ) - calc( var(--r) * 2px ) );
 					width: calc( var(--r) * 4px );
 					height: calc( var(--r) * 4px );
 					border-radius: 50%;
-					cursor: move;
 
 					&:hover {
-						&:before {
+						&:after {
 							display: block;
 						}
 					}
 
 					&:before {
 						content: "";
+						background: #b229;
+						position: absolute;
+						top: 0;
+						left: 0;
+						right: 0;
+						bottom: 0;
+						border-radius: 50%;
+						cursor: move;
+						z-index: 1;
+					}
+
+					&:after {
+						content: "";
 						display: none;
 						position: absolute;
 						top: 50%;
 						left: 100%;
-						width: 10px;
-						height: 10px;
+						width: 12px;
+						height: 12px;
 						margin: -5px 0 0 -5px;
 						background: #fff;
-						border: 1px solid #000;
+						// border: 1px solid #000;
+						box-shadow: 0 0 0 1px #000;
 						cursor: ew-resize;
+						z-index: 2;
 					}
 				}
 			}
 		}
 
 		.strip {
-			height: 90px;
+			height: 56px;
 			background: #ddd;
 			border-top: 1px solid #777a;
+			--size: 36px;
+
+			.frames {
+				font-size: 0;
+				padding: 10px 0 0 10px;
+
+				span {
+					display: inline-block;
+					width: var( --size );
+					height: var( --size );
+					margin: 0 8px 0 0;
+					background: #0001 url(~/gfx/sprite.png) no-repeat;
+					background-position: calc( calc( var( --fX ) * var( --size ) ) * -1 ) calc( calc( var( --fY ) * var( --size ) ) * -1 );
+					background-size: calc( var( --size ) * 10 ) auto;
+					box-shadow: 0 0 0 1px #0002,
+								0 1px 3px #0005;
+					cursor: pointer;
+				}
+			}
 		}
 	}
 }
