--- a/src/partials/editor/content.htm
+++ b/src/partials/editor/content.htm
@@ -1,39 +1,41 @@
 <div class="layout" data-area="editor">
-	<div class="tree">
-		<div class="item">
-			<i class="icon-arrow"></i>
-			<i class="icon-folder"></i>
-			<span>Fighter</span>
+	<div class="left">
+		<div class="tree">
+			<div class="item">
+				<i class="icon-arrow"></i>
+				<i class="icon-folder"></i>
+				<span>Fighter</span>
 
-			<div class="children">
-				<div class="item">
-					<i class="icon-blank"></i>
-					<i class="icon-frame"></i>
-					<span>High Kick</span>
-				</div>
-				<div class="item">
-					<i class="icon-blank"></i>
-					<i class="icon-frame"></i>
-					<span>Mid Kick</span>
-				</div>
-				<div class="item">
-					<i class="icon-blank"></i>
-					<i class="icon-frame"></i>
-					<span>Low Kick</span>
+				<div class="children">
+					<div class="item">
+						<i class="icon-blank"></i>
+						<i class="icon-frame"></i>
+						<span>High Kick</span>
+					</div>
+					<div class="item">
+						<i class="icon-blank"></i>
+						<i class="icon-frame"></i>
+						<span>Mid Kick</span>
+					</div>
+					<div class="item">
+						<i class="icon-blank"></i>
+						<i class="icon-frame"></i>
+						<span>Low Kick</span>
+					</div>
 				</div>
 			</div>
-		</div>
 
-		<div class="item">
-			<i class="icon-arrow"></i>
-			<i class="icon-folder"></i>
-			<span>Blow</span>
+			<div class="item">
+				<i class="icon-arrow"></i>
+				<i class="icon-folder"></i>
+				<span>Blow</span>
 
-			<div class="children">
-				<div class="item">
-					<i class="icon-blank"></i>
-					<i class="icon-frame"></i>
-					<span>Splatter</span>
+				<div class="children">
+					<div class="item">
+						<i class="icon-blank"></i>
+						<i class="icon-frame"></i>
+						<span>Splatter</span>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -45,7 +47,7 @@
 		</div>
 		<div class="strip">
 			<div class="frames" data-click="frames-select">
-				<span style="--fY: 0; --fX: 0;"></span>
+				<span style="--fY: 0; --fX: 0;" class="active"></span>
 				<span style="--fY: 0; --fX: 1;"></span>
 				<span style="--fY: 0; --fX: 2;"></span>
 				<span style="--fY: 0; --fX: 3;"></span>
