--- a/src/css/editor.less
+++ b/src/css/editor.less
@@ -56,7 +56,14 @@
 				margin: 1px 0;
 
 				&.icon-blank { }
-				&.icon-arrow { background-image: url(~/icons/icon-arrow.png); background-size: 8px 8px; }
+				&.icon-arrow {
+					background-image: url(~/icons/icon-arrow.png);
+					background-size: 8px 8px;
+
+					&.down {
+						transform: rotate(90deg);
+					}
+				}
 				&.icon-folder { background-image: url(~/icons/icon-folder.png); opacity: .5; }
 				&.icon-frame { background-image: url(~/icons/icon-frame.png); opacity: .5; }
 			}
