--- a/src/partials/editor/content.htm
+++ b/src/partials/editor/content.htm
@@ -1,6 +1,6 @@
 <div class="layout" data-area="editor">
 	<div class="left">
-		<div class="tree">
+		<div class="tree" data-click="tree-click">
 			<div class="item">
 				<i class="icon-arrow"></i>
 				<i class="icon-folder"></i>
