editor frames strip view

--- a/src/partials/editor/content.htm
+++ b/src/partials/editor/content.htm
@@ -47,10 +47,10 @@
 		</div>
 		<div class="strip">
 			<div class="frames" data-click="frames-select">
-				<span style="--fY: 0; --fX: 0;" class="active"></span>
-				<span style="--fY: 0; --fX: 1;"></span>
-				<span style="--fY: 0; --fX: 2;"></span>
-				<span style="--fY: 0; --fX: 3;"></span>
+				<span style="--fY: 0; --fX: 0;" class="active"><i>120ms</i><s>2px</s><b>2px</b></span>
+				<span style="--fY: 0; --fX: 1;"><i>120ms</i><s>0px</s><b>2px</b></span>
+				<span style="--fY: 0; --fX: 2;"><i>120ms</i><s>0px</s><b>2px</b></span>
+				<span style="--fY: 0; --fX: 3;"><i>120ms</i><s>0px</s><b>2px</b></span>
 			</div>
 		</div>
 	</div>
