--- a/src/css/editor.less
+++ b/src/css/editor.less
@@ -202,7 +202,7 @@
 		}
 
 		.strip {
-			height: 56px;
+			height: 93px;
 			background: #ddd;
 			border-top: 1px solid #777a;
 			--size: 36px;
@@ -212,21 +212,60 @@
 				padding: 10px 0 0 10px;
 
 				span {
+					background: #eaeaea;
+					position: relative;
 					display: inline-block;
-					width: var( --size );
-					height: var( --size );
-					margin: 0 8px 0 0;
-					background: #0001 url(~/gfx/sprite.png) no-repeat;
-					background-position: calc( calc( var( --fX ) * var( --size ) ) * -1 ) calc( calc( var( --fY ) * var( --size ) ) * -1 );
-					background-size: calc( var( --size ) * 10 ) auto;
-					box-shadow: 0 0 0 1px #0002,
-								0 1px 3px #0005;
+					width: calc( var( --size ) + 16px );
+					height: calc( var( --size ) + 36px );
+					margin: 0 11px 0 0;
+					border-radius: 3px;
+					box-shadow: 0 0 0 1px #0001,
+								0 1px 3px #0004;
 					cursor: pointer;
 
 					&.active {
 						box-shadow: 0 0 0 2px #f55,
 									0 1px 3px #0005;
 						cursor: default;
+					}
+
+					&:before {
+						content: "";
+						position: absolute;
+						top: 18px;
+						left: 8px;
+						width: var( --size );
+						height: var( --size );
+						background: #f2f2f2 url(~/gfx/sprite.png) no-repeat;
+						background-position: calc( calc( var( --fX ) * var( --size ) ) * -1 ) calc( calc( var( --fY ) * var( --size ) ) * -1 );
+						background-size: calc( var( --size ) * 10 ) auto;
+						box-shadow: 0 0 0 1px #0002;
+					}
+
+					i {
+						font-size: 10px;
+						font-style: normal;
+						text-align: right;
+						position: absolute;
+						top: 5px;
+						left: 7px;
+					}
+
+					s {
+						font-size: 10px;
+						text-decoration: none;
+						position: absolute;
+						bottom: 5px;
+						left: 3px;
+					}
+
+					b {
+						font-size: 10px;
+						font-weight: 400;
+						text-decoration: none;
+						position: absolute;
+						bottom: 5px;
+						right: 3px;
 					}
 				}
 			}
