--- a/src/css/editor.less
+++ b/src/css/editor.less
@@ -37,6 +37,13 @@
 		}
 
 		.item {
+			&.active {
+				span {
+					background: #f00;
+					color: #fff;
+				}
+			}
+
 			&.collapsed {
 				height: 19px;
 
@@ -75,6 +82,7 @@
 				font-size: 13px;
 				margin: 2px 0 0 1px;
 				padding: 2px;
+				border-radius: 3px;
 			}
 
 			.children {
@@ -149,6 +157,12 @@
 			.canvas {
 				background-size: 8px 8px;
 				left: 20px;
+
+				&.flip {
+					&:before {
+						transform: scaleX(-1);
+					}
+				}
 
 				&:before {
 					background-size: 2880px auto;
@@ -227,6 +241,12 @@
 						box-shadow: 0 0 0 2px #f55,
 									0 1px 3px #0005;
 						cursor: default;
+					}
+
+					&.flip {
+						&:before {
+							transform: scaleX(-1);
+						}
 					}
 
 					&:before {
