--- a/src/partials/editor/content.htm
+++ b/src/partials/editor/content.htm
@@ -1,7 +1,7 @@
 <div class="layout" data-area="editor">
 	<div class="left">
 		<div class="tree" data-click="tree-click">
-			<div class="item">
+			<!-- <div class="item">
 				<i class="icon-arrow"></i>
 				<i class="icon-folder"></i>
 				<span>Fighter</span>
@@ -37,7 +37,7 @@
 						<span>Splatter</span>
 					</div>
 				</div>
-			</div>
+			</div> -->
 		</div>
 	</div>
 	<div class="right">
@@ -47,10 +47,10 @@
 		</div>
 		<div class="strip">
 			<div class="frames" data-click="frames-select">
-				<span style="--fY: 0; --fX: 0;" class="active"><i>120ms</i><s>2px</s><b>2px</b></span>
+				<!-- <span style="--fY: 0; --fX: 0;" class="active"><i>120ms</i><s>2px</s><b>2px</b></span>
 				<span style="--fY: 0; --fX: 1;"><i>120ms</i><s>0px</s><b>2px</b></span>
 				<span style="--fY: 0; --fX: 2;"><i>120ms</i><s>0px</s><b>2px</b></span>
-				<span style="--fY: 0; --fX: 3;"><i>120ms</i><s>0px</s><b>2px</b></span>
+				<span style="--fY: 0; --fX: 3;"><i>120ms</i><s>0px</s><b>2px</b></span> -->
 			</div>
 		</div>
 	</div>
