renamed game to karate-ka

--- a/src/css/main.less
+++ b/src/css/main.less
@@ -26,7 +26,7 @@ content {
 			background-image: var( --img );
 		}
 
-		&[style*="--img: url('/app/ant/karate/gfx/bg-01.png');"] {
+		&[style*="--img: url('~/gfx/bg-01.png');"] {
 			background: #000;
 
 			&:before {
