--- a/src/css/main.less
+++ b/src/css/main.less
@@ -30,10 +30,10 @@ content {
 			background: #000;
 
 			&:before {
-				top: 46px;
+				top: 0;
 				left: 10px;
 				width: 760px;
-				height: 420px;
+				height: 495px;
 				image-rendering: pixelated;
 			}
 		}
