--- a/src/partials/content.htm
+++ b/src/partials/content.htm
@@ -1,5 +1,5 @@
 <content data-show="game" data-context="game-content">
-	<div class="game-view" data-area="game" style="--img: url('~/gfx/bg-01.png');">
+	<div class="game-view" data-area="game">
 		<canvas></canvas>
 	</div>
 </content>
