implementing new gfx

--- a/src/css/editor.less
+++ b/src/css/editor.less
@@ -127,7 +127,7 @@
 					bottom: 0;
 					filter: drop-shadow(0 1px 5px #0003);
 					image-rendering: pixelated;
-					background: url(~/gfx/sprite.png) no-repeat;
+					background: url(~/icons/fighter.png) no-repeat;
 					background-position: 0 0;
 					background-size: calc( var( --size ) * 10 ) auto;
 				}
@@ -147,7 +147,7 @@
 					left: calc( var( --aX ) * var( --size ) );
 					width: var( --size );
 					height: var( --size );
-					background: url(~/gfx/sprite.png) no-repeat;
+					background: url(~/icons/fighter.png) no-repeat;
 					background-position: calc( calc( var( --aX ) * var( --size ) ) * -1 ) calc( calc( var( --aY ) * var( --size ) ) * -1 );
 					background-size: calc( var( --size ) * 10 ) auto;
 					box-shadow: 0 0 0 2px #f55;
@@ -276,7 +276,7 @@
 						left: 8px;
 						width: var( --size );
 						height: var( --size );
-						background: #f2f2f2 url(~/gfx/sprite.png) no-repeat;
+						background: #f2f2f2 url(~/icons/fighter.png) no-repeat;
 						background-position: calc( calc( var( --fX ) * var( --size ) ) * -1 ) calc( calc( var( --fY ) * var( --size ) ) * -1 );
 						background-size: calc( var( --size ) * 10 ) auto;
 						box-shadow: 0 0 0 1px #0002;
