--- a/src/css/main.less
+++ b/src/css/main.less
@@ -7,7 +7,7 @@ content {
 	bottom: 0;
 
 	.game-view {
-		background: linear-gradient(90deg, #dfdfdf, #e7e7e7);
+		background: linear-gradient(90deg, #bfbeb2, #f6eed7);
 		position: absolute;
 		top: 0;
 		left: 0;
@@ -24,6 +24,16 @@ content {
 			background: 50% 50% no-repeat;
 			background-size: 100% auto;
 			background-image: var( --img );
+		}
+
+		&:after1 {
+			content: "";
+			position: absolute;
+			bottom: 37px;
+			left: 0;
+			width: 100%;
+			height: 1px;
+			background: #aaa;
 		}
 
 		// &.d[style*="--img: url('~/gfx/bg-01.png');"] {
